non usare newInstance di Class